# cosmos

./: .gitignore  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  models.rs
src-tauri/src/commands/: ai.rs  books.rs  capture.rs  goals.rs  items.rs  links.rs  mod.rs  notes.rs  tasks.rs  vault.rs
src/components/: AddBookModal.tsx  AddModal.tsx  Board.tsx  BookCard.tsx  BookEditModal.tsx  BooksToolbar.tsx  BooksView.tsx  Card.tsx  CardImage.tsx  CardLink.tsx  CardText.tsx  CardVideo.tsx  Checkbox.tsx  CollectionPicker.tsx  DeadlinePicker.tsx  GoalModal.tsx  GoalsToolbar.tsx  GoalsView.tsx  ItemDetail.tsx  MarkdownEditor.tsx  ModeSwitch.tsx  NotesView.tsx  TagPill.tsx  TaskDetail.tsx  TaskModal.tsx  TasksToolbar.tsx  TasksView.tsx  Toolbar.tsx  VaultPicker.tsx  task-meta.tsx
src/components/ui/: button.tsx  calendar.tsx  input.tsx  popover.tsx  textarea.tsx
src/hooks/: use-column-count.ts  use-vault.ts
src/lib/: colors.ts  tauri-commands.ts
src/stores/: board-store.ts
src/styles/: index.css
src/types/: index.ts
